--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
       <a href="#how" data-ko="작동 방식" data-en="How it works">작동 방식</a>
       <a href="#planner" data-ko="AI 기획자" data-en="AI Planner">AI 기획자</a>
       <a href="#pricing" data-ko="가격" data-en="Pricing">가격</a>
-      <a href="app.html" class="nav-cta" data-ko="무료로 시작하기" data-en="Get Started Free">무료로 시작하기</a>
+      <a href="app.html" class="nav-cta" data-ko="데모 체험" data-en="Try Demo">Try Demo</a>
     </div>
     <div class="lang-toggle">
       <button class="lang-btn" id="btn-ko" onclick="setLang('ko')">KO</button>
@@ -48,8 +48,8 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
   <h1 class="reveal reveal-d1" data-ko="기획자 없이,<br><em>기획서를.</em>" data-en="No planner?<br><em>No problem.</em>">기획자 없이,<br><em>기획서를.</em></h1>
   <p class="hero-sub reveal reveal-d2" data-ko="팀원들이 각자 의견만 말하면, AI 기획자가 판단하고 수렴해서 기획서를 만들어줍니다. 역할별 맞춤 문서까지." data-en="Your team shares opinions. AI planner judges, synthesizes, and delivers a PRD — with role-specific documents for everyone.">팀원들이 각자 의견만 말하면, AI 기획자가 판단하고 수렴해서 기획서를 만들어줍니다. 역할별 맞춤 문서까지.</p>
   <div class="hero-actions reveal reveal-d3">
-    <a href="app.html" class="btn-primary" data-ko="무료로 시작하기 →" data-en="Get Started Free →">무료로 시작하기 →</a>
-    <a href="#how" class="btn-ghost" data-ko="어떻게 작동하나요?" data-en="How does it work?">어떻게 작동하나요?</a>
+    <a href="app.html" class="btn-primary" data-ko="데모 체험하기 →" data-en="Try the Demo →">Try the Demo →</a>
+    <a href="#how" class="btn-ghost" data-ko="어떻게 작동하나요?" data-en="How does it work?">How does it work?</a>
   </div>
   <div class="hero-visual reveal reveal-d4">
     <div class="hero-visual-bar"><div class="hero-visual-dot"></div><div class="hero-visual-dot"></div><div class="hero-visual-dot"></div></div>
@@ -131,7 +131,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
         <li data-ko="기획자 의견 2개 섹션" data-en="Planner opinions — 2 sections">기획자 의견 2개 섹션</li>
         <li data-ko="역할별 문서 미리보기" data-en="Role docs preview">역할별 문서 미리보기</li>
       </ul>
-      <a href="app.html" class="price-btn price-btn-outline" data-ko="체험하기" data-en="Try Free">체험하기</a>
+      <a href="app.html" class="price-btn price-btn-outline" data-ko="데모 체험" data-en="Try Demo">Try Demo</a>
     </div>
     <div class="price-card featured reveal reveal-d1">
       <div class="price-name">Team</div>
@@ -145,7 +145,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
         <li data-ko="역할별 문서 4종" data-en="4 role-based documents">역할별 문서 4종</li>
         <li data-ko="팀 코멘트 + AI 반영" data-en="Team comments + AI revisions">팀 코멘트 + AI 반영</li>
       </ul>
-      <a href="app.html" class="price-btn price-btn-lime" data-ko="시작하기" data-en="Get Started">시작하기</a>
+      <a href="app.html" class="price-btn price-btn-lime" data-ko="데모 체험" data-en="Try Demo">Try Demo</a>
     </div>
     <div class="price-card reveal reveal-d2">
       <div class="price-name">Pro</div>
@@ -168,7 +168,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
   <div class="final-glow"></div>
   <h2 class="reveal" data-ko="기획서, <em>의견만 모으면</em><br>나머지는 AI가." data-en="Just collect opinions.<br><em>AI handles the rest.</em>">기획서, <em>의견만 모으면</em><br>나머지는 AI가.</h2>
   <p class="reveal reveal-d1" data-ko="지금 바로 프로젝트를 만들고 팀에 공유하세요." data-en="Create a project now and share with your team.">지금 바로 프로젝트를 만들고 팀에 공유하세요.</p>
-  <a href="app.html" class="btn-primary reveal reveal-d2" data-ko="무료로 시작하기 →" data-en="Get Started Free →">무료로 시작하기 →</a>
+  <a href="app.html" class="btn-primary reveal reveal-d2" data-ko="데모 체험하기 →" data-en="Try the Demo →">Try the Demo →</a>
 </div>
 
 <footer class="footer">
