--- a/public/onplan.html
+++ b/public/onplan.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%230a0a0a'/%3E%3Ctext x='3' y='23' font-family='Arial' font-weight='bold' font-size='18' fill='%23d4f53c'%3EOn%3C/text%3E%3C/svg%3E">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OnPlan — No planner? No problem.</title>
+<title>OnPlan</title>
 <meta name="description" content="Your team shares opinions. AI planner judges, synthesizes, and generates a PRD.">
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Pretendard+Variable:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
@@ -53,7 +53,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
 
 <header class="hero">
   <div class="hero-badge reveal"><div class="hero-badge-dot"></div><span>AI-Powered Product Planning</span></div>
-  <h1 class="reveal reveal-d1" data-ko="기획자 없이,<br><em>기획서를.</em>" data-en="No planner?<br><em>No problem.</em>">기획자 없이,<br><em>기획서를.</em></h1>
+  <h1 class="reveal reveal-d1" data-ko="기획자 없이,<br><em>기획서를.</em>" data-en="Skip the PM.<br><em>Ship the PRD.</em>">기획자 없이,<br><em>기획서를.</em></h1>
   <p class="hero-sub reveal reveal-d2" data-ko="팀원들이 각자 의견만 말하면, AI 기획자가 판단하고 수렴해서 기획서를 만들어줍니다. 역할별 맞춤 문서까지." data-en="Your team shares opinions. AI planner judges, synthesizes, and delivers a PRD — with role-specific documents for everyone.">팀원들이 각자 의견만 말하면, AI 기획자가 판단하고 수렴해서 기획서를 만들어줍니다. 역할별 맞춤 문서까지.</p>
   <div class="hero-actions reveal reveal-d3">
     <a href="demo.html" class="btn-primary" data-ko="데모 체험하기 →" data-en="Try the Demo →">Try the Demo →</a>
@@ -199,7 +199,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
       <div class="footer-tagline" data-ko="AI로 일하는 방식을 바꿉니다" data-en="Changing how teams work with AI">Changing how teams work with AI</div>
     </div>
     <div class="footer-contact">
-      <div class="footer-contact-item"><span class="footer-contact-label">Email</span><a href="mailto:onhaesong@gmail.com">onhaesong@gmail.com</a></div>
+      <div class="footer-contact-item"><span class="footer-contact-label">Email</span><a href="/cdn-cgi/l/email-protection#3e5150565f5b4d5150597e59535f5752105d5153"><span class="__cf_email__" data-cfemail="c0afaea8a1a5b3afaea780a7ada1a9aceea3afad">[email&#160;protected]</span></a></div>
       <div class="footer-contact-item"><span class="footer-contact-label">Tel</span><a href="tel:+821057413556">+82 10-5741-3556</a></div>
     </div>
   </div>
@@ -209,7 +209,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
   </div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 let currentLang='en';
 function setLang(lang){
   currentLang=lang;
@@ -221,7 +221,7 @@ function setLang(lang){
     else el.innerHTML=val;
   });
   document.documentElement.lang=lang;
-  document.title=lang==='ko'?'OnPlan — 기획자 없이, 기획서를.':'OnPlan — No planner? No problem.';
+  document.title='OnPlan';
   // Update app links with lang param
   document.querySelectorAll('a[href^="demo.html"]').forEach(a=>{a.href='demo.html?lang='+lang;});
 }
