--- a/public/demo.html
+++ b/public/demo.html
@@ -599,6 +599,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
       <div class="footer-inner">
         <div class="footer-brand">
           <div class="footer-logo">ON<span>hae</span></div>
+          <div style="font-size:12px;color:var(--g500);margin-top:6px;">CEO YounJee Song</div>
           <div class="footer-tagline" data-ko="AI로 일하는 방식을 바꿉니다" data-en="Changing how teams work with AI">AI로 일하는 방식을 바꿉니다</div>
         </div>
         <div class="footer-contact">
