--- a/public/onplan.html
+++ b/public/onplan.html
@@ -196,6 +196,7 @@ section{padding:120px 48px;max-width:1200px;margin:0 auto;}.sec-label{font-size:
   <div class="footer-top">
     <div>
       <div class="footer-logo"><svg viewBox="0 0 165 60" xmlns="http://www.w3.org/2000/svg"><text font-size="47" transform="translate(0 40)"><tspan x="0" y="0" fill="#d4f53c" font-family="Outfit" font-weight="700">ON</tspan><tspan fill="#555" font-family="Outfit" font-weight="500">hae</tspan></text></svg></div>
+      <div style="font-size:12px;color:var(--g500);margin-top:6px;">CEO YounJee Song</div>
       <div class="footer-tagline" data-ko="AI로 일하는 방식을 바꿉니다" data-en="Changing how teams work with AI">Changing how teams work with AI</div>
     </div>
     <div class="footer-contact">
